--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title> Bonziworld </title>
+		<meta name="google-site-verification" content="utlXRBc_vctO6LZI8-hPZ8ZTQGSI5_wT7Yp_bd-DJ8k" />
 		<link rel="stylesheet" href="/static/js/jquery-ui.css"/>
 		<link rel="stylesheet" href="/static/98ui/style.css"/>
 		<link rel="stylesheet" href="/static/style.css"/>
